testsuite/tests/typecheck/should_fail/T16059d.hs
module T16059d where

import T16059b

type Bar' = Bar
