testsuite/tests/typecheck/should_fail/T16059d.stderr

T16059d.hs:5:1: error:
    • Illegal unboxed tuple type as function argument: (# #)
    • In the expansion of type synonym ‘Bar’
      In the type synonym declaration for ‘Bar'’
    Suggested fix: Perhaps you intended to use UnboxedTuples